adjusting reveal styles to hide overflow - prevent scroll bars

--- a/src/assets/scss/base/_global.scss
+++ b/src/assets/scss/base/_global.scss
@@ -9,3 +9,7 @@
 * a {
   text-decoration: none;
 }
+
+.overflow-hidden {
+  overflow: hidden;
+}
